--- a/index.ipynb
+++ b/index.ipynb
@@ -2437,7 +2437,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    return sum(list(map(lambda x: (x[0]*x_value**x[1])*y_value)"
+    "    return sum(list(map(lambda x: (x[0]*x_value**x[1])*y_value**x[2],list)"
    ]
   },
   {
