--- a/index.ipynb
+++ b/index.ipynb
@@ -2550,7 +2550,10 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    tterm[0]"
+    "    t=term[0]\n",
+    "    e=\n",
+    "    r=\n",
+    "    return (t,e)"
    ]
   },
   {
