Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2635,7 +2635,7 @@
    ],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(filter(lambda x:x[0] not=0, list(map(lambda term: term_df_dx(term),list_of_terms))))"
+    "    return list(filter(x[0] not=0, list(map(lambda term: term_df_dx(term),list_of_terms))))"
    ]
   },
   {
