Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2658,31 +2658,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
     "    t=term[0]*term[2]\n",
-    "    e=term{}\n",
-    "    r=\n",
+    "    e=term[1]\n",
+    "    r=term[2]-1\n",
     "    return (t,e,r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 2, 1)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "four_x_squared_y # (4, 2, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 2, 0)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "term_df_dy(four_x_squared_y) # (4, 2, 0)"
    ]
